--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -191,6 +191,44 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Update Homebrew tap
+        if: ${{ !contains(github.ref, '-beta') && !contains(github.ref, '-alpha') && !contains(github.ref, '-rc') }}
+        env:
+          HOMEBREW_TAP_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
+        run: |
+          # Clone the tap repo
+          git clone https://x-access-token:${HOMEBREW_TAP_TOKEN}@github.com/matthewpick/homebrew-pesto-clipboard.git tap-repo
+          cd tap-repo
+
+          # Update the cask
+          cat > Casks/pesto-clipboard.rb << 'EOF'
+          cask "pesto-clipboard" do
+            version "${{ steps.version.outputs.VERSION }}"
+            sha256 "${{ steps.sha256.outputs.SHA256 }}"
+
+            url "https://github.com/matthewpick/pesto-clipboard/releases/download/v#{version}/PestoClipboard-#{version}.dmg"
+            name "Pesto Clipboard"
+            desc "Clipboard manager for macOS"
+            homepage "https://github.com/matthewpick/pesto-clipboard"
+
+            depends_on macos: ">= :sonoma"
+
+            app "Pesto Clipboard.app"
+
+            zap trash: [
+              "~/Library/Application Support/PestoClipboard",
+              "~/Library/Preferences/com.pestoclipboard.PestoClipboard.plist",
+            ]
+          end
+          EOF
+
+          # Commit and push
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add Casks/pesto-clipboard.rb
+          git commit -m "Update pesto-clipboard to ${{ steps.version.outputs.VERSION }}"
+          git push
+
       - name: Cleanup keychain
         if: always()
         run: |
